--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,17 +14,36 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [workspace.dependencies]
-dioxus = { version = "0.6.0" }
+dioxus = { version = "0.6.3" }
+axum = { version = "0.7.9" }
 
+frontend = { path = "frontend" }
 backend = { path = "backend" }
 
 [dependencies]
-dioxus = { workspace = true }
-frontend = { path = "frontend" }
+axum = { workspace = true, optional = true }
+dioxus = { workspace = true, features = ["fullstack", "router"] }
+dioxus-fullstack = { version = "0.6.3", optional = true }
+dioxus-web = { version = "0.6.3", features = ["hydrate"], optional = true }
+dioxus-cli-config = { version = "0.6.3", optional = true }
+frontend = { workspace = true }
+backend = { workspace = true }
+tokio = { version = "1.44.1", features = ["full"], optional = true }
 
 [features]
-default = ["web"]
-web = ["dioxus/web"]
+default = []
+web = [
+    "dioxus/web",
+    "dioxus-web",
+]
+server = [
+    "axum",
+    "tokio",
+    "dioxus/fullstack",
+    "dioxus-fullstack/axum",
+    "dioxus-cli-config",
+    "backend/server",
+]
 #desktop = ["dioxus/desktop"]
 #mobile = ["dioxus/mobile"]
 
