--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ frontend = { workspace = true }
 backend = { workspace = true }
 tokio = { version = "1.44.1", features = ["full"], optional = true }
 tracing = "0.1.41"
+anyhow = "1.0.97"
+tracing-subscriber = "0.3.19"
 
 [features]
 default = []
