--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,6 +8,11 @@ edition = "2024"
 dioxus = { workspace = true, features = ["fullstack"] }
 axum = { workspace = true, optional = true }
 tracing = "0.1.41"
+kameo = "0.16.0"
+futures = "0.3.31"
+jsonrpsee-types = "0.24.9"
+serde = "1.0.219"
+serde_json = "1.0.140"
 
 [features]
 server = [
